Fixes sidebar and markdown text colors in RES night mode Adjusts markdown colors in dark mode Refactors structure of titlebox forms (uses a little less CSS now)

--- a/content.less
+++ b/content.less
@@ -130,6 +130,10 @@ body > .content {
 }
 
 .commentarea {
+	.panestack-title {
+		margin: 2px @content-padding;
+	}
+	
 	.infobar {
 		margin-right: 0;
 	}
